--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,30 @@
 {
     "manifest_version": 2,
-    "name":    "working version4",
-    "description": "evil things",
+    "name":    "work",
+    "description": "autofill form",
     "version": "0.0",
 
     "background": {
         "persistent": false,
         "scripts": ["background.js"]
     },
-    "content_scripts": [{
+    "content_scripts": [
+      {
         "matches": ["<all_urls>"],
-        "js":      ["content.js"],
+        "js":      ["inject.js"],
         "run_at":  "document_end"
-    }],
+      },
+      {
+        "matches": ["*://login.taobao.com/*"],
+        "js":      ["autofill.js"],
+        "run_at":  "document_end"
+      },
+      {
+        "matches": ["*://mai.taobao.com/*"],
+        "js":      ["autoredirect.js"],
+        "run_at":  "document_start"
+      }
+    ],
     "browser_action": {
         "default_title": "Test Extension"
     },
