--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,11 @@
         "matches": ["*://mai.taobao.com/*"],
         "js":      ["autoredirect.js"],
         "run_at":  "document_start"
+      },
+      {
+        "matches": ["*://qudao.gongxiao.tmall.com/*"],
+        "js":      ["autopaging.js"],
+        "run_at":  "document_end"
       }
     ],
     "browser_action": {
