--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name":    "work",
-    "description": "autofill form",
+    "description": "download invitelist",
     "version": "0.0",
 
     "background": {
